--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="login">
-            <p>Login</p>
+           <a href="login.html"><p>Login</p></a>
         </div>
         <div class="menu-div">
             <i class="menu fa-solid fa-bars"></i>
