--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </div>
 
         <div class="login">
-           <a href="login.html"><p>Login</p></a>
+           <a href="login.html" style="display: flex;
+    align-items: center;
+    color: white;
+    font-size: 18px;
+    height: 75px;
+    padding: 8px;
+    width: 65%;
+    border: 1px solid rgb(173, 173, 173);"><p>Login</p></a>
         </div>
         <div class="menu-div">
             <i class="menu fa-solid fa-bars"></i>
