--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     height: 75px;
     padding: 8px;
     width: 65%;
-    border: 1px solid rgb(173, 173, 173);"><p>Login</p></a>
+    text-decoration:none;"><p>Login</p></a>
         </div>
         <div class="menu-div">
             <i class="menu fa-solid fa-bars"></i>
