--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     align-items: center;
     color: white;
     font-size: 18px;
+border-bottom:1px solid white;
    
     text-decoration:none;"><p>Login</p></a>
         </div>
