--- a/login.html
+++ b/login.html
@@ -6,16 +6,16 @@
     <title>login account:moviezone</title>
 </head>
 <body style="display: flex;justify-content: center;background-color: black;">
-    <form action="" style="height: 70vh;width: 90vw;border: 1.5px solid white;background-color: #272b30;margin-top: 10vh;">
+    <form action="" style="height: 90vh;width: 90vw;border: 1.5px solid white;background-color: #272b30;margin-top: 5vh;">
         
 <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter your email or phone:</label>
-<input type="text"  placeholder="enter your mobile or email" style="height: 5vmin;width: 50%;margin: 15px;">
+<input type="text"  placeholder="enter your mobile or email" style="height: 10vmin;width: 50%;margin: 15px;font-size: 20px;">
 <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter your password:</label>
-<input type="password"  placeholder="enter your password" style="height: 5vmin;width: 50%;margin: 15px;">
+<input type="password"  placeholder="enter your password" style="height: 10vmin;width: 50%;margin: 15px;font-size: 20px;">
 <button style="display: block; width: 30%;height: 10%;color: white;background-color: rgb(48, 199, 48);font-size: 20px;font:bolder;margin: auto ;margin-top: 15px;">Login</button>
 <hr>
-<p style="color: white;font-size: 25px ;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;background-color: rgb(0, 136, 255);width: max-content;margin: auto;margin-top: 15px;">create new account </p><a href="" style="display: block
-; font-size: 12px;"><u style="font-size: 25px;color: white;margin: auto;">click here..</u></a>
+<button style="color: white;font-size: 25px ;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;background-color: rgb(0, 136, 255);display: block; margin: auto;margin-top: 15px;">create new account </button>
+<a href="" style="display: block;display: flex;justify-content: center; "><p style="display: inline;font-size: 20px;background-color: white;width: max-content;margin: auto;">click here</p></a>
 
 
     </form>
