--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
         </div>
 
         <div class="login">
-           <a href="login.html" style="display: flex;
-    align-items: center;
-    color: white;
-    font-size: 18px;
-border-bottom:1px solid white;
-   
-    text-decoration:none;"><p>Login</p></a>
+           <a href="login.html" style="display: flex;color: white;font-size: 18px;text-decoration: none;">Login</a>
         </div>
         <div class="menu-div">
             <i class="menu fa-solid fa-bars"></i>
