--- a/login.html
+++ b/login.html
@@ -9,16 +9,28 @@
     <form action="" style="height:fit-content;width: 90vw;border: 1.5px solid white;background-color: #272b30;margin-top: 3vh;">
         
 <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter your email or phone:</label>
-<input type="text"  placeholder="enter your mobile or email" style="height: 10vmin;width: 80%;margin: 15px;font-size: 20px;">
+<input type="text"  placeholder="enter your mobile or email" style="height: 10vmin;width: 80%;margin: 15px;font-size: 20px;" id="username">
 <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter your password:</label>
-<input type="password"  placeholder="enter your password" style="height: 10vmin;width: 80%;margin: 15px;font-size: 20px;">
-<button style="display: block; width: 30%;height: 10%;color: white;background-color: rgb(48, 199, 48);font-size: 20px;font:bolder;margin: auto ;margin-top: 15px;">Login</button>
+<input type="password"  placeholder="enter your password" style="height: 10vmin;width: 80%;margin: 15px;font-size: 20px;" id="password">
+<button style="display: block;padding: 10px; width: 30%;color: white;background-color: rgb(48, 199, 48);font-size: 20px;font:bolder;margin: auto ;margin-top: 15px;border-radius: 10px;cursor: pointer;" onclick="login()">Login</button>
 <hr>
-<button style="color: white;font-size: 25px ;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;background-color: rgb(0, 136, 255);display: block; margin: auto;margin-top: 15px;">create new account </button>
-<a href="" style="display: block;display: flex;justify-content: center; "><p style="display: inline;font-size: 20px;background-color: white;width: max-content;margin: auto;margin-bottom: 20px;margin-top: 20px;">click here</p></a>
+<button style="color: white;font-size: 25px ;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;background-color: rgb(0, 136, 255);display: block; margin: auto;margin-top: 15px;cursor: pointer;"><a href="register.html" style="text-decoration: none;color: white;">create new account</a> </button>
+<a href="register.html" style="display: block;display: flex;justify-content: center; "><p style="display: inline;font-size: 20px;background-color: white;width: max-content;margin: auto;margin-bottom: 20px;margin-top: 20px;">click here</p></a>
 
 
     </form>
     
+    <script>
+        function login(){
+            let username=document.getElementById('username').value;
+            let password=document.getElementById('password').value;
+            if(username!=""&&password!=""){
+                alert("username and password not found");
+            }
+            else{
+                document.write("something went wrong");
+            }
+        }
+    </script>
 </body>
 </html>
