--- a/register.html
+++ b/register.html
@@ -12,16 +12,16 @@
         style="height:fit-content;width: 90vw;border: 1.5px solid white;background-color: #272b30;margin-top: 3vh;">
         <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter
             your username</label>
-        <input id="username" type="text" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
+        <input id="username" type="text" placeholder="enter username" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
         <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">enter
             your mobile number</label>
-        <input id="mobile" type="number" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
+        <input id="mobile" placeholder="enter mobile number" type="number" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
         <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">create a
             password</label>
-        <input id="confirmpassword" type="password" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
+        <input id="confirmpassword" type="password" placeholder="enter new password" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
         <label for="" style="display: block;color: white;font-size: 25px;font-family: monospace;margin: 15px;">confirm
             password</label>
-        <input id="password" type="text" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
+        <input id="password" type="text" placeholder="confirm password" style="height: 7vmin;width: 80%;margin: 15px;font-size: 20px;">
 
         <button
             style="display: block; width: 40%;height: 30%;padding: 10px; color: white;background-color: rgb(48, 199, 48);font-size: 20px;font:bolder;margin: auto ;margin-top: 15px;margin-bottom: 15px;border-radius: 10px;cursor: pointer;"
