--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- sideBar -->
 
     <div id="sideBar" class="close"
-        style="width: 40vw;height: 60vh;background: rgba(52, 49, 49, 0.824);flex-direction: column;display: block;position: absolute;top: 95px;right: 0px;">
+        style="width: 40vw;height: 60vh;background: rgba(52, 49, 49, 0.824);flex-direction: column;display: none;position: absolute;top: 95px;right: 0px;">
         <button
             style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: flex;cursor: pointer;border: none;font-family: monospace;"
             onclick="closeSideBar()"> <span>close</span> <span style="display: flex;flex-direction: column;"><span
