--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             onclick="closeSideBar()"> <span>close</span> <span style="display: flex;flex-direction: column;"><span
                     class="a"></span><span class="a"></span><span class="a"></span></span> </button>
         <a href=""
-            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;">profile</a>
+            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px; margin-left: 10px;display: block;font-family: monospace;">profile</a>
         <a href=""
-            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;">wish
+            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;  margin-left: 10px;display: block;font-family: monospace;">wish
             list</a>
         <a href=""
-            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;">favourite</a>
+            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;  margin-left: 10px;display: block;font-family: monospace;">favourite</a>
         <a href=""
-            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;">currently
+            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;  margin-left: 10px;display: block;font-family: monospace;">currently
             airring</a>
         <a href=""
-            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;">most
+            style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;  margin-left: 10px;display: block;font-family: monospace;">most
             watched</a>
         <a href=""
             style="color: white;font-size: 25px;text-decoration: none;background-color: transparent;width: fit-content;height: fit-content;margin: 20px;display: block;font-family: monospace;"></a>
